include ../common.make

rules_sources =  \
	AbstractTypesShouldNotHavePublicConstructorsRule.cs \
	AttributeArgumentsShouldHaveAccessorsRule.cs \
	AvoidEmptyInterfaceRule.cs \
	AvoidMultidimensionalIndexerRule.cs \
	AvoidPropertiesWithoutGetAccessorRule.cs \
	AvoidVisibleFieldsRule.cs \
	AvoidRefAndOutParametersRule.cs \
	AvoidSmallNamespaceRule.cs \
	AvoidVisibleNestedTypesRule.cs \
	ConsiderAddingInterfaceRule.cs \
	ConsiderConvertingFieldToNullableRule.cs \
	ConsiderConvertingMethodToPropertyRule.cs \
	ConsiderUsingStaticTypeRule.cs \
	DeclareEventHandlersCorrectlyRule.cs \
	DefineAZeroValueRule.cs \
	DisposableTypesShouldHaveFinalizerRule.cs \
	DoNotDeclareSettersOnCollectionPropertiesRule.cs \
	DoNotDeclareVirtualMethodsInSealedTypeRule.cs \
	DoNotDeclareProtectedMembersInSealedTypeRule.cs \
	EnsureSymmetryForOverloadedOperatorsRule.cs \
	EnumeratorsShouldBeStronglyTypedRule.cs \
	EnumsShouldDefineAZeroValueRule.cs \
	EnumsShouldUseInt32Rule.cs \
	FinalizersShouldBeProtectedRule.cs \
	FlagsShouldNotDefineAZeroValueRule.cs \
	ImplementEqualsAndGetHashCodeInPairRule.cs \
	ImplementIComparableCorrectlyRule.cs \
	InternalNamespacesShouldNotExposeTypesRule.cs \
	ListsAreStronglyTypedRule.cs \
	MainShouldNotBePublicRule.cs \
	MarkAssemblyWithAssemblyVersionRule.cs \
	MarkAssemblyWithAttributeRule.cs \
	MarkAssemblyWithCLSCompliantRule.cs \
	MarkAssemblyWithComVisibleRule.cs \
	MissingAttributeUsageOnCustomAttributeRule.cs \
	OperatorEqualsShouldBeOverloadedRule.cs \
	OverrideEqualsMethodRule.cs \
	PreferEventsOverMethodsRule.cs \
	PreferIntegerOrStringForIndexersRule.cs \
	PreferUriOverStringRule.cs \
	PreferXmlAbstractionsRule.cs \
	ProvideAlternativeNamesForOperatorOverloadsRule.cs \
	ProvideTryParseAlternativeRule.cs \
	StronglyTypedRule.cs \
	StronglyTypeICollectionMembersRule.cs \
	TypesShouldBeInsideNamespacesRule.cs \
	UseFlagsAttributeRule.cs \
	UseCorrectDisposeSignaturesRule.cs \
	ImplementICloneableCorrectlyRule.cs

EXTRA_TESTS_OPTIONS += -d:CODE_ANALYSIS

tests_sources = \
	AbstractTypesShouldNotHavePublicConstructorsTest.cs \
	AttributeArgumentsShouldHaveAccessorsTest.cs \
	AvoidEmptyInterfaceTest.cs \
	AvoidMultidimensionalIndexerTest.cs \
	AvoidPropertiesWithoutGetAccessorTest.cs \
	AvoidVisibleFieldsTest.cs \
	AvoidRefAndOutParametersTest.cs \
	AvoidSmallNamespaceTest.cs \
	AvoidVisibleNestedTypesTest.cs \
	ConsiderAddingInterfaceTest.cs \
	ConsiderConvertingFieldToNullableTest.cs \
	ConsiderConvertingMethodToPropertyTest.cs \
	ConsiderUsingStaticTypeTest.cs \
	DeclareEventHandlersCorrectlyTest.cs \
	DisposableTypesShouldHaveFinalizerTest.cs \
	DoNotDeclareSettersOnCollectionPropertiesTest.cs \
	DoNotDeclareVirtualMethodsInSealedTypeTest.cs \
	DoNotDeclareProtectedMembersInSealedTypeTest.cs \
	EnsureSymmetryForOverloadedOperatorsTest.cs \
	EnumeratorsShouldBeStronglyTypedTest.cs \
	EnumsShouldDefineAZeroValueTest.cs \
	EnumsShouldUseInt32Test.cs \
	FinalizersShouldBeProtectedTest.cs \
	FlagsShouldNotDefineAZeroValueTest.cs \
	GlobalSuppressions.cs \
	ImplementEqualsAndGetHashCodeInPairTest.cs \
	ImplementIComparableCorrectlyTest.cs \
	InternalNamespacesShouldNotExposeTypesTest.cs \
	ListsAreStronglyTypedTest.cs \
	MainShouldNotBePublicTest.cs \
	MarkAssemblyWithAssemblyVersionTest.cs \
	MarkAssemblyWithCLSCompliantTest.cs \
	MarkAssemblyWithComVisibleTest.cs \
	MissingAttributeUsageOnCustomAttributeTest.cs \
	OperatorEqualsShouldBeOverloadedTest.cs \
	OverrideEqualsMethodTest.cs \
	PreferEventsOverMethodsTest.cs \
	PreferIntegerOrStringForIndexersTest.cs \
	PreferUriOverStringTest.cs \
	PreferXmlAbstractionsTest.cs \
	ProvideTryParseAlternativeTest.cs \
	ProvideAlternativeNamesForOperatorOverloadsTest.cs \
	StronglyTypeICollectionMembersTest.cs \
	TypesShouldBeInsideNamespacesTest.cs \
	UseFlagsAttributeTest.cs \
	UseCorrectDisposeSignaturesTest.cs \
	ImplementICloneableCorrectlyTest.cs
