include ../common.make

rules_sources =  \
	AvoidArgumentExceptionDefaultConstructorRule.cs \
	AvoidThrowingBasicExceptionsRule.cs \
	DoNotDestroyStackTraceRule.cs \
	DoNotThrowInNonCatchClausesRule.cs \
	DoNotThrowInUnexpectedLocationRule.cs \
	DoNotThrowReservedExceptionRule.cs \
	DoNotSwallowErrorsCatchingNonSpecificExceptionsRule.cs \
	ExceptionShouldBeVisibleRule.cs \
	Impl/ExecutionBlock.cs \
	Impl/ExecutionPath.cs \
	Impl/ExecutionPathFactory.cs \
	InstantiateArgumentExceptionCorrectlyRule.cs \
	MissingExceptionConstructorsRule.cs \
	NewExceptionsRule.cs \
	UseObjectDisposedExceptionRule.cs

tests_sources = \
	AvoidArgumentExceptionDefaultConstructorTest.cs \
	AvoidThrowingBasicExceptionsTest.cs \
	DoNotThrowInNonCatchClausesTest.cs \
	DoNotThrowInUnexpectedLocationTest.cs \
	DoNotDestroyStackTraceTest.cs \
	DoNotSwallowErrorsCatchingNonSpecificExceptionsTest.cs \
	DoNotThrowReservedExceptionTest.cs \
	ExceptionShouldBeVisibleTest.cs \
	MissingExceptionConstructorsTest.cs \
	InstantiateArgumentExceptionCorrectlyTest.cs \
	UseObjectDisposedExceptionTest.cs
