include ../common.make

rules_sources =  \
	AvoidDeepNamespaceHierarchyRule.cs \
	AvoidRedundancyInMethodNameRule.cs \
	AvoidRedundancyInTypeNameRule.cs \
	AvoidTypeInterfaceInconsistencyRule.cs \
	AvoidNonAlphanumericIdentifierRule.cs \
	DoNotPrefixEventsWithAfterOrBeforeRule.cs \
	DoNotPrefixValuesWithEnumNameRule.cs \
	DoNotUseReservedInEnumValueNamesRule.cs \
	ParameterNamesShouldMatchOverriddenMethodRule.cs \
	UseCorrectCasingRule.cs \
	UseCorrectPrefixRule.cs \
	UseCorrectSuffixRule.cs \
	UsePluralNameInEnumFlagsRule.cs \
	UsePreferredTermsRule.cs \
	UseSingularNameInEnumsUnlessAreFlagsRule.cs 

tests_sources = \
	AvoidDeepNamespaceHierarchyTest.cs \
	AvoidRedundancyInMethodNameTest.cs \
	AvoidRedundancyInTypeNameTest.cs \
	AvoidTypeInterfaceInconsistencyTest.cs \
	AvoidNonAlphanumericIdentifierTest.cs \
	DoNotPrefixEventsWithAfterOrBeforeTest.cs \
	DoNotPrefixValuesWithEnumNameTest.cs \
	DoNotUseReservedInEnumValueNamesTest.cs \
	ParameterNamesShouldMatchOverriddenMethodTest.cs \
	UsePluralNameInEnumFlagsTest.cs \
	UseSingularNameInEnumsUnlessAreFlagsTest.cs \
	UseCorrectCasingTest.cs \
	UseCorrectPrefixTest.cs \
	UseCorrectSuffixTest.cs \
	UsePreferredTermsTest.cs
